// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/descriptions/demo/basic.md correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-title"
  >
    User Info
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              UserName
            </span>
            <span
              class="ant-descriptions-item-content"
            >
              Zhou Maomao
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Telephone
            </span>
            <span
              class="ant-descriptions-item-content"
            >
              1810000000
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Live
            </span>
            <span
              class="ant-descriptions-item-content"
            >
              Hangzhou, Zhejiang
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Remark
            </span>
            <span
              class="ant-descriptions-item-content"
            >
              empty
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Address
            </span>
            <span
              class="ant-descriptions-item-content"
            >
              No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/border.md correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered"
>
  <div
    class="ant-descriptions-title"
  >
    User Info
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
          >
            Product
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Cloud Database
          </td>
          <th
            class="ant-descriptions-item-label"
          >
            Billing Mode
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Prepaid
          </td>
          <th
            class="ant-descriptions-item-label"
          >
            Automatic Renewal
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            YES
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
          >
            Order time
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            2018-04-24 18:00:00
          </td>
          <th
            class="ant-descriptions-item-label"
          >
            Usage Time
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
          >
            Status
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            <span
              class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
            >
              <span
                class="ant-badge-status-dot ant-badge-status-processing"
              />
              <span
                class="ant-badge-status-text"
              >
                Running
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
          >
            Negotiated Amount
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $80.00
          </td>
          <th
            class="ant-descriptions-item-label"
          >
            Discount
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $20.00
          </td>
          <th
            class="ant-descriptions-item-label"
          >
            Official Receipts
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $60.00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
          >
            Config Info
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            Data disk type: MongoDB
            <br />
            Database version: 3.4
            <br />
            Package: dds.mongo.mid
            <br />
            Storage space: 10 GB
            <br />
            Replication_factor:3
            <br />
            Region: East China 1
            <br />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/responsive.md correctly 1`] = `
<div>
  <div
    class="ant-descriptions ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-title"
    >
      Responsive Descriptions
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Product
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Cloud Database
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Billing
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Prepaid
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              time
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              18:00:00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Amount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $80.00
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Discount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $20.00
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Official
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $60.00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Config Info
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              Data disk type: MongoDB
              <br />
              Database version: 3.4
              <br />
              Package: dds.mongo.mid
              <br />
              Storage space: 10 GB
              <br />
              Replication_factor:3
              <br />
              Region: East China 1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        default
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-descriptions ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-title"
    >
      Custom Size
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Product
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Cloud Database
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Billing
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Prepaid
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              time
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              18:00:00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Amount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $80.00
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Discount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $20.00
            </td>
            <th
              class="ant-descriptions-item-label"
            >
              Official
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $60.00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
            >
              Config Info
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              Data disk type: MongoDB
              <br />
              Database version: 3.4
              <br />
              Package: dds.mongo.mid
              <br />
              Storage space: 10 GB
              <br />
              Replication_factor:3
              <br />
              Region: East China 1
              <br />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical.md correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-title"
  >
    User Info
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              UserName
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Telephone
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Live
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-content"
            >
              Zhou Maomao
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-content"
            >
              1810000000
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-content"
            >
              Hangzhou, Zhejiang
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Remark
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <span
              class="ant-descriptions-item-label"
            >
              Address
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <span
              class="ant-descriptions-item-content"
            >
              empty
            </span>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <span
              class="ant-descriptions-item-content"
            >
              No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical-border.md correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered"
>
  <div
    class="ant-descriptions-title"
  >
    User Info
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Product
          </td>
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Billing Mode
          </td>
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Automatic Renewal
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Cloud Database
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Prepaid
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            YES
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Order time
          </td>
          <td
            class="ant-descriptions-item-label"
            colspan="5"
          >
            Usage Time
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            2018-04-24 18:00:00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-label"
            colspan="5"
          >
            Status
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            <span
              class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
            >
              <span
                class="ant-badge-status-dot ant-badge-status-processing"
              />
              <span
                class="ant-badge-status-text"
              >
                Running
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Negotiated Amount
          </td>
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Discount
          </td>
          <td
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Official Receipts
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $80.00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $20.00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $60.00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-label"
            colspan="5"
          >
            Config Info
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            Data disk type: MongoDB
            <br />
            Database version: 3.4
            <br />
            Package: dds.mongo.mid
            <br />
            Storage space: 10 GB
            <br />
            Replication_factor:3
            <br />
            Region: East China 1
            <br />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
